2000-06-26  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12076: Completion/Core/compinstall: overwrote file if no
	style information; overwrote symbolic link instead of following;
	didn't check file name for sanity.

2000-06-26  Bart Schaefer  <schaefer@zsh.org>

	* 12074: Doc/Zsh/builtins.yo, Doc/Zsh/manual.yo: Remove one more
	reference to compfmt; add missing menu items to node listing.

2000-06-26  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12073: Src/builtin.c, Src/utils.c, Doc/Zsh/builtins.yo: first
	pass at `read -t' which tests for availability of input before
	inputting.

2000-06-26  Sven Wischnowsky  <wischnow@zsh.org>

	* 3208: Completion/User/_use_lo: default completion even if there
 	are options
	
	* 12070: Completion/Core/_ignored: fix for completer lookup in
 	_ignored
	
	* 12068: Doc/Zsh/mod_computil.yo, Src/Zle/computil.c: remove
 	compfmt; a bit of explanation for compfiles and compgroups
	
	* 12067: Completion/Core/_history, Src/Zle/zle_tricky.c: typo in
 	_history; missing free()s in zle_tricky.c
	
	* 12066: Src/Zle/computil.c: missing allocation of list for option
 	arguments
	
2000-06-25  Bart Schaefer  <schaefer@zsh.org>

	* 12063: Doc/Zsh/builtins.yo, Doc/Zsh/compwid.yo,
	Doc/Zsh/mod_computil.yo, Doc/Zsh/mod_zutil.yo: Fix typos; assorted
	clarification and reformatting.

2000-06-23  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12044: Src/builtin.c:  read -A assigned an unnecessary null
	if there was trailing whitespace; careful of distinction between
	whitespace and non-whitespace field separators.

2000-06-23  Sven Wischnowsky  <wischnow@zsh.org>

	* 12041,12043 : Completion/Core/compinit: even more compinit stuff,
 	change prompt, search for insecure parent dirs
	
2000-06-22  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 12040: Src/builtin.c: typeset -r on existing parameter set
	the readonly flag before assigning any value on the same command
	line.

2000-06-22  Bart Schaefer  <schaefer@zsh.org>
