@@ -1,3 +1,8 @@
+2000-06-26  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
+
+	* unposted: Src/builtin.c, Src/utils.c: move read_poll to utils.c
+	as suggested by Bart.
+
 2000-06-26  Peter Stephenson  <pws@cambridgesiliconradio.com>
 
 	* 12076: Completion/Core/compinstall: overwrote file if no
